# AnyItem

./: .gitignore  CMakeLists.txt  Makefile
doc/: UML.dia
src/: AnyItem.cpp  AnyItem.h  AnyItemImpl.h  CMakeLists.txt  main.cpp
src/impl/: ArrayItemImpl.cpp  ArrayItemImpl.h  BlankItem.cpp  BlankItem.h  DictionaryItemImpl.cpp  DictionaryItemImpl.h  ReferenceCountedItem.cpp  ReferenceCountedItem.h  ValueItem.h
